@@ -1,5 +1,6 @@
 2021-XX-XX   2.2.3:
 -------------------
+  * optimize slice assignment with negative step, e.g.: `a[::-1] = 1`
 
 
 2021-07-16   2.2.2:
